<resources>
    <string name="app_name">Covid Monitoring App</string>
    <string name="enter_symptoms">Add Symptoms</string>
    <string name="measure_heart_rate">Measure Heart Rate</string>
    <string name="measure_respiratory_rate">Measure Respiratory Rate</string>
    <string name="textview">TextView</string>
    <string name="submit">Submit</string>
    <string name="choose_the_following_symptoms">Symptoms</string>
    <string name="heart_rate_monitor">Heart Rate Monitor</string>
    <string name="heart_rate_monitor_instruction">Click on "RECORD HEART RATE" button and hold your index finger on the camera when the flash is ON for 45 seconds. Once the recording is complete, Click on "CALCULATE HEART RATE" Button and wait for 3-4 minutes to generate your heart rate measurement.</string>
    <string name="record_heart_rate">Record Fingertip Video</string>
    <string name="respiratory_rate_monitor">Respiratory Rate Monitor</string>
    <string name="respiratory_rate_monitor_instructions">Instruction: Lie down on a flat surface and keep your smartphone on your chest for 45 seconds after clicking the Measure Respiratory Ratebutton</string>
    <string name="measure_tespiratory_rate">Measure Respiratory Rate</string>
</resources>